@@ -1,248 +1,0 @@
-<!doctype html>
-<head>
-  <meta charset="utf-8">
-
-  <title>[page-title] &lt; [service-name] &lt; EMBL-EBI</title>
-  <meta name="description" content="EMBL-EBI"><!-- Describe what this page is about -->
-  <meta name="keywords" content="bioinformatics, europe, institute"><!-- A few keywords that relate to the content of THIS PAGE (not the whol project) -->
-  <meta name="author" content="EMBL-EBI"><!-- Your [project-name] here -->
-
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-
-  <!-- CSS: implied media=all -->
-  <!-- CSS concatenated and minified via ant build script-->
-  <link rel="stylesheet" href="../../move-to-cdn/css/ebi-global.css" type="text/css" media="all">
-  <link rel="stylesheet" href="../../move-to-cdn/fonts/fonts.css" type="text/css" media="all">
-<!--   <link rel="stylesheet" href="http://www.ebi.ac.uk/web_guidelines/css/compliance/develop/984-24-col-fluid.css" type="text/css" media="screen"> -->
-
-  <link rel="stylesheet" href="../../move-to-cdn/libraries/foundation-6/css/foundation.css" type="text/css" media="all">
-
-
-  <!-- you can replace this with [projectname]-colours.css. See http://www.ebi.ac.uk/web/style/colour for details of how to do this -->
-  <!-- also inform ES so we can host your colour palette file -->
-  <link rel="stylesheet" href="../../move-to-cdn/css/embl-petrol-colours.css" type="text/css" media="all">
-
-  <!-- for production the above can be replaced with -->
-  <!--
-  <link rel="stylesheet" href="//www.ebi.ac.uk/web_guidelines/css/compliance/mini/ebi-fluid-embl.css">
-  -->
-
-  <!-- end CSS-->
-
-
-  <!-- All JavaScript at the bottom, except for Modernizr -->
-  <script src="../../move-to-cdn/libraries/modernizr/modernizr.custom.49274.js"></script>
-
-</head>
-
-<body class="level2"><!-- add any of your classes or IDs -->
-  <div id="skip-to">
-    <ul>
-      <li><a href="#content">Skip to main content</a></li>
-      <li><a href="#local-nav">Skip to local navigation</a></li>
-      <li><a href="#global-nav">Skip to EBI global navigation menu</a></li>
-      <li><a href="#global-nav-expanded">Skip to expanded EBI global navigation menu (includes all sub-sections)</a></li>
-    </ul>
-  </div>
-
-  <div id="local-masthead">
-    <header>
-
-      <div id="global-masthead" class="clearfix">
-        <!--This has to be one line and no newline characters-->
-        <a href="//www.ebi.ac.uk/" title="Go to the EMBL-EBI homepage"><span class="ebi-logo"></span></a>
-
-        <nav>
-          <ul id="global-nav" class="menu">
-            <!-- set active class as appropriate -->
-            <li class="active" id="services"><a href="//www.ebi.ac.uk/services"><i class="icon icon-generic" data-icon="t"></i> Services</a></li>
-            <li id="research"><a href="//www.ebi.ac.uk/research"><i class="icon icon-generic" data-icon="t"></i> Research</a></li>
-            <li id="training"><a href="//www.ebi.ac.uk/training"><i class="icon icon-generic" data-icon="t"></i> Training</a></li>
-            <li id="about" class="last"><a href="//www.ebi.ac.uk/about"><i class="icon icon-generic" data-icon="t"></i> About us</a></li>
-            <li>
-              <form id="global-search" name="global-search" action="/ebisearch/search.ebi" method="GET">
-                <fieldset>
-                  <label class="float-left">
-                    <input type="text" name="query" id="global-searchbox">
-                  </label>
-                  <input type="submit" name="submit" value="[" class="button icon icon-generic">
-                  <input type="hidden" name="db" value="allebi" checked="checked">
-                  <input type="hidden" name="requestFrom" value="global-masthead" checked="checked">
-                </fieldset>
-              </form>
-            </li>
-          </ul>
-        </nav>
-
-      </div>
-
-      <div class="masthead row">
-        <!-- local-title -->
-        <div class="columns medium-7" id="local-title">
-          <h1><a href="[service-url]" title="Back to [service-name] homepage">Compliance Templates</a></h1>
-        </div>
-        <!-- /local-title -->
-
-        <!-- local-search -->
-        <!-- if you do not have a local-search, delete the following form -->
-        <form id="local-search" class="columns medium-5" name="local-search" action="[search-action]" method="post">
-          <fieldset class="float-right">
-            <label class="float-left"><input type="text" name="first" id="local-searchbox"></label>
-            <input type="submit" name="submit" value="[" class="button icon icon-generic">
-            <!-- If your search is more complex than just a keyword search, you can link to an Advanced Search -->
-            <span class="adv"><a href="../search" id="adv-search" title="Advanced">Advanced</a></span>
-          </fieldset>
-          <!-- Include some example searchterms - keep them short and few. -->
-          <div class="clearfix float-right show-for-large">Examples: <a href="[search-url-1]">[search-text-1]</a>, <a href="[search-url-1]">[search-text-2]</a>, <a href="[search-url-1]">[search-text-3]</a></div>
-        </form>
-        <!-- /local-search -->
-
-        <!-- local-nav -->
-        <nav>
-          <ul class="menu float-left" data-description="navigational">
-            <li><a href="#">Home</a></li>
-            <li><a href="ebi-level2-boilerplate-blank-fluid.html">Blank</a></li>
-            <li><a href="ebi-level2-boilerplate-right-sidebar-fluid.html">Right sidebar</a></li>
-            <li><a href="ebi-level2-boilerplate-4cols-fluid.html">Four columns</a></li>
-            <li><a href="ebi-level2-boilerplate-search-results-fluid.html">Search results</a></li>
-          </ul>
-          <ul class="menu align-right" data-description="functional">
-            <li class="functional"><a href="#">Share this</a></li>
-          </ul>
-        </nav>
-        <!-- /local-nav -->
-
-      </div>
-
-
-      </header>
-
-    </div>
-
-    <div id="content" role="main" class="row">
-
-      <!-- Suggested layout containers -->
-
-       <section>
-
-         <nav aria-label="You are here:" role="navigation">
-           <ul class="breadcrumbs">
-             <li><a href="#">Home</a></li>
-             <li><a href="#">Parent</a></li>
-             <li class="disabled">Disabled</li>
-             <li>
-               <span class="show-for-sr">Current: </span> This page
-             </li>
-           </ul>
-         </nav>
-
-          <h2>EBI Framework documention and style guide</h2>
-
-          <div class="row">
-
-            <div class="serif columns medium-9 medium-push-3">
-              <p>This collection of materials will give you guidance on how to build web pages and content that comply with EMBL-EBI:</p>
-              <ul>
-                <li>visual look</li>
-                <li>semantic structure</li>
-                <li>writing guidelines</li>
-              </ul>
-              <p>And it should help you build the tools faster than if you were to make it from scratch</p>
-              <h3>Requirements and what you get</h3>
-              <p>The framework is built with modern best practices and targets browsers shipped within the past three years, though other browsers should still handle the content and appearance well (graceful degredation). The framework is also mobile responsive, so you won't have to spend too much time adapting for mobile.</p>
-              <p>We've use the Foundation Framework (version 6) as a baseline to accelerate our own development, and it will help you create better looking and working tool tips, forms, sliders, and modal boxes.</p>
-              <p>But we've taken care to make the implemntation non-intrusive, so if you don't want to use these features, they won't likely get in your way.</p>
-              <p>A note on JavaScript: The framework does not require jQuery, but if you do use it you will get more nice to haves and your life may be easier all around. The jQuery functionality is enable by default. For more see the section on disabling JavaScript addons (you'll comment out two lines -- need to write this...)</p>
-            </div>
-
-            <div class="columns medium-3 medium-pull-9">
-              <ul class="menu vertical">
-                <li><a href="#" class="active">About</a></li>
-                <li><a href="#">Design patterns</a></li>
-                <ul class="nested vertical menu">
-                  <li><a href="#">Navigation</a></li>
-                  <ul class="nested vertical menu">
-                    <li><a href="#">Menus</a></li>
-                    <li><a href="#">Breadcrumbs</a></li>
-                  </ul>
-                  <li><a href="#">Content</a></li>
-                  <li><a href="#">Grid</a></li>
-                  <li><a href="#">Colour</a></li>
-                  <li><a href="#">Typography</a></li>
-                  <li><a href="#">Icons</a></li>
-                  <li><a href="#">Images</a></li>
-                  <li><a href="#">Feedback</a></li>
-                  <li><a href="#">Helper classes</a></li>
-                </ul>
-                <li><a href="#">Writing</a></li>
-                <li><a href="#">Browser compatibility</a></li>
-                <li><a href="#">Sitemap</a></li>
-                <li><a href="#">Accesibility</a></li>
-              </ul>
-            </div>
-
-          </div>
-
-      </section>
-      <!-- End suggested layout containers -->
-
-    </div>
-
-
-    <footer>
-      <!-- Optional local footer (insert citation / project-specific copyright / etc here -->
-      <div id="local-footer">
-        <div class="row">
-          <span class="reference">How to reference this page: ...</span>
-        </div>
-      </div>
-      <!-- End optional local footer -->
-
-      <div id="global-footer">
-
-        <nav id="global-nav-expanded" class="row">
-          <!-- Footer will be automatically inserted by footer.js -->
-        </nav>
-
-        <section id="ebi-footer-meta" class="row">
-          <!-- Footer meta will be automatically inserted by footer.js -->
-        </section>
-
-      </div>
-
-    </footer>
-  </div> <!--! end of #wrapper -->
-
-
-  <!-- JavaScript -->
-
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <!--
-  <script>window.jQuery || document.write('<script src="../js/libs/jquery-1.10.2.min.js"><\/script>')</script>
-  -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script src="../../move-to-cdn/libraries/foundation-6/js/foundation.js"></script>
-
-  <!-- Your custom JavaScript file scan go here... change names accordingly -->
-  <!--
-  <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/js/plugins.js"></script>
-  <script defer="defer" src="//www.ebi.ac.uk/web_guidelines/js/script.js"></script>
-  -->
-  <script defer="defer" src="../../move-to-cdn/js/cookiebanner.js"></script>
-  <script defer="defer" src="../../move-to-cdn/js/foot.js"></script>
-
-  <!-- Google Analytics details... -->
-  <!-- Change UA-XXXXX-X to be your site's ID -->
-  <!--
-  <script>
-    window._gaq = [['_setAccount','UAXXXXXXXX1'],['_trackPageview'],['_trackPageLoadTime']];
-    Modernizr.load({
-      load: ('https:' == location.protocol ? '//ssl' : '//www') + '.google-analytics.com/ga.js'
-    });
-  </script>
-  -->
-
-</body>
-</html>
