@@ -1,2 +1,4 @@
-23/11/2015
+2016-01-14
+- Version is at "rough draft" stage. Largely implementing a revised style and functionality. 
+2015-11-23
 - Forks EBI Compliance theme into EBI Framework v0.0.1
